# donkeytype

./: Cargo.toml  README.md  cspell.json
.github/workflows/: release.yml  rust.yml
src/: args.rs  color_scheme.rs  config.rs  dictionary.rs  expected_input.rs  help_window.rs  helpers.rs  main.rs  runner.rs  stats.rs  test_results.rs
tests/: cli.rs
