[package]
name = "donkeytype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
mockall = "0.11.4"
predicates = "3.0.4"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
ratatui = "0.23.0"
csv = "1.3.0"
chrono = { version = "0.4.31", features = ["serde"]}
[dev-dependencies]
assert_cmd = "2.0.12"
