[package]
name = "donkeytype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
mockall = "0.13.0"
predicates = "3.1.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.14.0"
ratatui = "0.29.0"
csv = "1.3.1"
chrono = { version = "0.4.38", features = ["serde"] }
[dev-dependencies]
assert_cmd = "2.0.16"
